# project-management-dashboard

./: .env.example  .eslintrc.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  electron-api.d.ts  electron-builder.yml  instrumentation.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  playwright.parity.config.ts  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  parity_regression.md
.github/workflows/: ci.yml  codeql.yml  release.yml  stale.yml
__tests__/: setup.ts
__tests__/__mocks__/: node-osc.ts  sacn.ts
__tests__/api/: audio-advanced.test.ts  audio-settings.test.ts  audio-snapshots.test.ts  audio.test.ts  backup.test.ts  deck.test.ts  health.test.ts  lights-control.test.ts  lights-groups-scenes.test.ts  lights.test.ts  misc.test.ts  project-advanced.test.ts  project-crud.test.ts  projects.test.ts  settings.test.ts  tasks-advanced.test.ts  tasks.test.ts
__tests__/helpers/: fixtures.ts  request.ts
__tests__/lib/: activity.test.ts  api.test.ts  audio-console.test.ts  backup.test.ts  db.test.ts  dmx.test.ts  events.test.ts  id.test.ts  osc.test.ts
__tests__/scripts/: release-notes.test.ts
app/: error.tsx  globals.css  layout.tsx  not-found.tsx
app/components/: ConfirmDialog.tsx  Dashboard.tsx  DmxMonitor.tsx  ErrorBoundary.tsx  FilterBar.tsx  HueWheel.tsx  KanbanBoard.tsx  Modal.tsx  (+23 more)
docs/: ARCHITECTURE.md  DESKTOP_ARCHITECTURE_PLAN.md  DEVELOPMENT.md  ENGINEERING_HANDOFF_UX_RELIABILITY.md  HANDOFF.md  HARDWARE_PROFILE.md  LEGACY_RUNTIME.md  NATIVE_CLOSEOUT.md  NATIVE_MIGRATION_BOARD.md  NATIVE_PARITY_HANDOFF.md  NATIVE_PARITY_MAP.md  OPERATIONS.md  PARITY_IMPLEMENTATION_HANDOFF_2026-04-20.md  PRODUCTIZATION_PLAN.md  RELEASE.md  UI_CONSOLE_REFRESH_PLAN.md  UI_PARITY_AUDIT_2026-04-20.md  UI_PARITY_RECOVERY.md
e2e/: accessibility.spec.ts  audio-console.spec.ts  audio.spec.ts  fixtures.ts  kanban.spec.ts  keyboard.spec.ts  layout-fit.spec.ts  legacy-parity-capture.spec.ts  lighting-spatial.spec.ts  modals.spec.ts  projects.spec.ts  tasks.spec.ts  timers.spec.ts
electron/: config.ts  dev-runner.ts  entitlements.plist  localApi.ts  main.ts  notarize.js  preload.ts  runtimePrefs.ts  serverManager.ts  shell.ts  splash.html  tsconfig.json  updater.ts  windowState.ts
lib/: activity.ts  api.ts  audio-console.ts  backup.ts  client-api.ts  companionExport.ts  cors.ts  db.ts  dmx.ts  effects.ts  events.ts  format.ts  light-constants.ts  light-types.ts  osc.ts  process-safety.ts  seed-data.ts  types.ts  view-state.ts
native/: CMakeLists.txt  README.md
native/qt-shell/: CMakeLists.txt  README.md
native/qt-shell/qml/: AudioChannelCard.qml  AudioChannelsPanel.qml  AudioMixTargetsPanel.qml  AudioSelectedStripPanel.qml  AudioToolbarPanel.qml  AudioWorkspacePanel.qml  ConsoleBadge.qml  ConsoleButton.qml  ConsoleComboBox.qml  ConsoleModal.qml  ConsoleSlider.qml  ConsoleStatCard.qml  ConsoleStatusBadge.qml  ConsoleSurface.qml  ConsoleSwitch.qml  ConsoleTabButton.qml  ConsoleTextArea.qml  ConsoleTextField.qml  ConsoleTheme.qml  DashboardAboutDialog.qml  DashboardHeaderPanel.qml  LightingContentPanel.qml  LightingDeleteFixtureDialog.qml  LightingDmxMonitorPanel.qml  LightingFixtureDialog.qml  LightingParityHelpers.js  LightingSidebarPanel.qml  LightingSpatialPlotPanel.qml  LightingToolbarPanel.qml  LightingWorkspacePanel.qml  Main.qml  OperatorParityHelpers.js  OperatorShortcutLayer.qml  OperatorShortcutsDialog.qml  ParityCaptureHarness.qml  PlanningBoardPanel.qml  PlanningCreateProjectDialog.qml  PlanningFocusPanel.qml  PlanningImportDialog.qml  PlanningProjectDetailDialog.qml  (+13 more)
native/qt-shell/src/: EngineProcess.cpp  EngineProcess.h  main.cpp
native/qt-shell/tests/qml/: tst_AudioChannelsPanel.qml  tst_AudioMixTargetsPanel.qml  tst_AudioSelectedStripPanel.qml  tst_AudioToolbarPanel.qml  tst_AudioWorkspacePanel.qml  tst_DashboardAboutDialog.qml  tst_DashboardHeaderPanel.qml  tst_LightingParityHelpers.qml  tst_LightingSpatialPlotPanel.qml  tst_LightingToolbarPanel.qml  tst_LightingWorkspacePanel.qml  tst_OperatorParityHelpers.qml  tst_OperatorShortcutLayer.qml  tst_OperatorShortcutsDialog.qml  tst_PlanningBoardPanel.qml  tst_PlanningModalFlow.qml  tst_PlanningProjectDetailDialog.qml  tst_PlanningQuickActionsPanel.qml  tst_PlanningSummaryGrid.qml  tst_PlanningToolbarPanel.qml  tst_PlanningWorkspacePanel.qml  tst_SafetyHoldButton.qml  tst_SetupControlSurfacePanel.qml  tst_SetupQuickSetupPanel.qml  tst_SetupWorkspacePanel.qml  tst_qml.cpp
scripts/: afterPack.js  audit-contrast.ts  clean.mjs  legacy-parity-capture.mjs  live-operator-interact.swift  native-acceptance.mjs  native-build.mjs  native-control-surface-qualification.mjs  native-delivery-acceptance.mjs  native-installer-acceptance.mjs  native-installer.mjs  native-live-parity.mjs  native-package.mjs  native-packaged-acceptance.mjs  native-parity-acceptance.mjs  native-parity-capture.mjs  native-release-identity.json  native-release-safety.mjs  native-runtime-harness.mjs  native-shell-test.mjs  native-sign-macos.mjs  native-sign-windows.mjs  native-smoke.mjs  native-update-repo.mjs  open-parity-benchmark.mjs  prepare-electron-runtime.mjs  prepare-standalone-runtime.mjs  seed.ts  verify-native-release-artifacts.mjs  verify-native-release-continuity.mjs  write-native-release-checksums.mjs
(+170 files in other folders)
